--- a/templates/user/_delete_form.html.twig
+++ b/templates/user/_delete_form.html.twig
@@ -1,4 +1,10 @@
-<form method="post" action="{{ path('app_user_delete', {'id': user.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post"
+      action="{{ path('user_delete', { id: user.id }) }}"
+      onsubmit="return confirm('Are you sure you want to delete this user?');">
+
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ user.id) }}">
-    <button class="btn">Delete</button>
+
+    <button class="w-full bg-red-600 text-white py-2 rounded-md hover:bg-red-700 transition">
+        Delete User
+    </button>
 </form>
