--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 <div class="max-w-7xl mx-auto mt-10 p-6 bg-white shadow-md rounded-lg">
     <div class="flex justify-between items-center mb-6 helvetica-condensed">
-        <h1 class="text-2xl font-bold">Users & Staff</h1>
+        <h1 class="text-2xl font-bold">Users</h1>
         <a href="{{ path('user_new') }}" class="helvetica-condensed bg-[rgb(29,53,153)] text-white px-4 py-2 rounded-md hover:bg-[rgb(242,182,34)] transition">
             Create User
         </a>
@@ -80,12 +80,13 @@
                         <td class="px-6 py-4 whitespace-nowrap">{{ user.username }}</td>
                         <td class="px-6 py-4 whitespace-nowrap">{{ user.name }}</td>
                         <td class="px-6 py-4 whitespace-nowrap">
-                            <span class="font-medium 
-                                {% if 'ROLE_ADMIN' in user.roles %} text-red-800
-                                {% elseif 'ROLE_STAFF' in user.roles %} text-blue-800
-                                {% else %} text-green-800{% endif %}">
-                                {{ user.roles|map(r => r|replace({'ROLE_': ''}))|join(', ') }}
-                            </span>
+                            {% if 'ROLE_ADMIN' in user.roles %}
+                                <span class="font-medium text-red-800">Admin</span>
+                            {% elseif 'ROLE_STAFF' in user.roles %}
+                                <span class="font-medium text-blue-800">Staff</span>
+                            {% else %}
+                                <span class="font-medium text-green-800">User</span>
+                            {% endif %}
                         </td>
                         <td class="px-6 py-4 whitespace-nowrap">{{ user.email }}</td>
                         <td class="px-6 py-4 whitespace-nowrap">
